Mobile printing fix
fix(config): fix for crash when switching to traditional template on
mobile
style(traditional): fix for squashed letters in traditional mobile mode
style(config): uniform and slim config menu
docs(readme): milestone achieved, add todo list

--- a/src/styles/classicresume.css
+++ b/src/styles/classicresume.css
@@ -59,3 +59,11 @@
   }
 
 }
+
+@media (width <= 768px){
+  
+  h3, h4, h5{
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
+}
