--- a/src/styles/configedit.css
+++ b/src/styles/configedit.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   width: 23rem;
   border: 2px solid black;
-  gap: 12px;
+  gap: 2px;
   padding: 8px 16px;
 
   label{
@@ -73,8 +73,10 @@
 }
 
 .rule{
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-top: 1px solid white;
-  width: 50%;
+  width: 25%;
 }
 
 .rule::after{
